style: using padding-top & border-box to avoid sider overflow being unexpectedly triggered

--- a/@opensumi/gatsby-theme/site/templates/markdown.module.less
+++ b/@opensumi/gatsby-theme/site/templates/markdown.module.less
@@ -314,7 +314,7 @@
   }
   // menu 滚动
   :global {
-    .nt-menu-item {
+    .ant-menu-item {
       &::after {
         display: none;
       }
@@ -324,7 +324,8 @@
       background: #fff;
     }
     .ant-menu-light {
-      margin-top: 24px;
+      box-sizing: border-box;
+      padding-top: 24px;
     }
     .ant-layout-sider-children {
       overflow: hidden;
